# Ultrafast_Smartcar

./: .gitignore  README.md
MPC_car/src/car_simulator/src/: car_simulator_nodelet.cpp
MPC_car/src/mpc_car/: CMakeLists.txt  package.xml
MPC_car/src/mpc_car/config/: mpc_car.yaml
MPC_car/src/mpc_car/launch/: simulation.launch
MPC_car/src/mpc_car/scripts/: actual_bspline_path.csv  actual_path.csv  analyze_trajectory_1.py  analyze_trajectory_error.py  bspline_path.csv  compare_path_error.py  data_collect.py  goal_pose.csv  planned_path.csv
MPC_car/src/mpc_car/src/: mpc_car_nodelet.cpp
ackermann_car/racebot_control/launch/: racebot_control.launch
ackermann_car/racebot_control/scripts/: gazebo_odometry.py  keyboard_teleop.py  servo_commands.py  transform.py
ackermann_car/racebot_description/scripts/: cmdvel2gazebo.py
ackermann_car/racebot_gazebo/config/teb/: move_base_params.yaml  teb_local_planner_params.yaml
ackermann_car/racebot_gazebo/launch/: navigation.launch  teb_demo.launch
ackermann_car/racebot_gazebo/launch/tianracer/: tianracer.launch
ackermann_car/racebot_gazebo/map/: map_planner.yaml
ackermann_car/racebot_gazebo/worlds/: gf_simulation.world  room  room_mini.world  warehouse.world  warehouse1.world
bspline_opt/: CMakeLists.txt
bspline_opt/include/bspline_opt/: bspline_optimizer.h  uniform_bspline.h
bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
common/: CMakeLists.txt
fdilink_ahrs/: wheeltec_udev.sh
hybrid_astar_planner/: CMakeLists.txt  package.xml
hybrid_astar_planner/include/: algorithm.h  constants.h  hybrid_astar.h  node2d.h  node3d.h  plan_container.hpp  planner_core.h  type.h  visualize.h
hybrid_astar_planner/src/: algorithm.cpp  hybrid_astar.cpp  node2d.cpp  node3d.cpp  planner_core.cpp  visualize.cpp
hybrid_astar_planner/test_the_plugin/include/: test_plugins.h
hybrid_astar_planner/test_the_plugin/launch/: config.rviz  test.launch  test_real.launch  test_sim.launch
hybrid_astar_planner/test_the_plugin/maps/: gf_map0.pgm  gf_map0.yaml  gf_map_full1.pgm  gf_map_full1.yaml  gf_map_full2.pgm  gf_map_full2.yaml  gf_map_full3.pgm  gf_map_full3.yaml  gf_simulation_map.pgm  gf_simulation_map.yaml  gf_simulation_map2.pgm  gf_simulation_map2.yaml  gf_simulation_map_test.pgm  gf_simulation_map_test.yaml  gf_simulation_map_test1.pgm  gf_simulation_map_test1.yaml  gf_simulation_map_test2.pgm  gf_simulation_map_test2.yaml  map_home_test.pgm  map_home_test.yaml  map_home_test1.pgm  map_home_test1.yaml  room_mini.yaml  room_mini_cropped.pgm  test1.pgm  test1.yaml  test_map.pgm  test_map.yaml  warehouse1.pgm  warehouse1.yaml
hybrid_astar_planner/test_the_plugin/maps/crop_map/: crop.py
hybrid_astar_planner/test_the_plugin/param/: costmap_common_params.yaml  global_costmap_params.yaml  hybird_A_star_params.yaml  move_base_params.yaml  plugins.yaml  rpp_controller_params.yaml  ufs_planner_params.yaml
hybrid_astar_planner/test_the_plugin/src/: test.cpp  test_plugins.cpp  tf_broadcaster.cpp
hybrid_astar_planner/test_the_plugin/world/: gf_simulation  gf_simulation.world  gf_simulation1.world  gf_simulation2.world  gf_simulation3.world  gf_simulation4.world  gf_simulation_test.world  gf_simulation_test1.world  gf_simulation_test10.world  gf_simulation_test11.world  gf_simulation_test12.world  gf_simulation_test13.world  gf_simulation_test2.world  gf_simulation_test3.world  gf_simulation_test4.world  gf_simulation_test5.world  gf_simulation_test6.world  gf_simulation_test7.world  gf_simulation_test8.world  gf_simulation_test9.world
lsx10/lslidar_driver/launch/: lslidar_serial.launch
racecar_sim/bringup/map/: map.yaml
racecar_sim/racecar_description/: CMakeLists.txt
racecar_sim/racecar_description/scripts/: keyboard_teleop.py  odom_pub.py
turn_on_wheeltec_robot/launch/: robot_model_visualization.launch  turn_on_wheeltec_robot.launch
turn_on_wheeltec_robot/launch/include/: base_serial.launch
turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
ufs_state_machine/: CMakeLists.txt  package.xml
ufs_state_machine/config/: state_machine_params.yaml
ufs_state_machine/launch/: robot_pose_ekf.launch  state_machine.launch  ufs_realization.launch  ufs_simulation.launch
ufs_state_machine/src/: state_machine_node.cpp
(+9 files in other folders)
